Use a database to store the users (r2dbc-h2)

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ repositories {
 dependencies {
     // Spring
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+
+    // Database
+    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'io.r2dbc:r2dbc-h2'
 
     // Tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
